--- a/Jupyter Notebooks/churn_analysis.ipynb
+++ b/Jupyter Notebooks/churn_analysis.ipynb
@@ -16,7 +16,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.stats.mstats import gmean\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
   },
   {
    "cell_type": "code",
@@ -34,8 +41,16 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "40c2fac8deeaeec80c11f86338dc80eaddcd45c6ab0761f221b780b5a4c0da1b"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
