Added General knowledge

--- a/Jupyter Notebooks/churn_analysis.ipynb
+++ b/Jupyter Notebooks/churn_analysis.ipynb
@@ -21,8 +21,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## General Knowledge\n",
+    "\n",
+    "### What is a customer churn?\n",
+    " customer churn occurs when an existing customer, user, player, subscriber or any kind of return client stops doing business or ends the relationship with a company.\n",
+    "\n",
+    "### Types of churn\n",
+    "\n",
+    "#### Contractual churn:\n",
+    " Contractual churn occurs when a customer is under contract for a service and decides to cancel their service. <br>Example: Cable TV, SaaS products (Software as a Service e.g. Dropbox).\n",
+    "\n",
+    "#### Voluntary churn:\n",
+    " Voluntary churn occurs when a user voluntarily cancels a service and includes prepaid cell phones, streaming subscriptions.\n",
+    "\n",
+    "#### Non-contractual churn:\n",
+    " Non-contractual churn ocurs when a customer is not under contract for a service and includes customer loyality at a retail location or online browsing.\n",
+    "\n",
+    "#### Involuntary churn:\n",
+    " Involuntary churn occurs when a churn occurs not at the request of the customer. For example: credit card expiration, utilities being shut off by the provider. <br>Most likely, you as a customer have cancelled a service for a variety of reasons including lack of usage, poor service or better price."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
