--- a/Jupyter Notebooks/churn_analysis.ipynb
+++ b/Jupyter Notebooks/churn_analysis.ipynb
@@ -45,17 +45,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step-by-Step Process\n",
+    "\n",
+    "### 1. data preprocessing\n",
+    "### 2. One-hot Encoding\n",
+    "### 3. Data Transformation (StandardScaler or MinMaxScaler)\n",
+    "### 4. Grid Search and Cross-Validation with Decision Tree Classifier\n",
+    "### 5. Tree diagram of the Decision Tree\n",
+    "### 6. Confusion Matrix, Classification report, and ROC-AUCdata preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import libraries\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.stats.mstats import gmean\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.metrics import roc_curve, roc_auc_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.metrics import plot_confusion_matrix\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
