--- a/Jupyter Notebooks/churn_analysis.ipynb
+++ b/Jupyter Notebooks/churn_analysis.ipynb
@@ -50,12 +50,12 @@
    "source": [
     "## Step-by-Step Process\n",
     "\n",
-    "### 1. data preprocessing\n",
-    "### 2. One-hot Encoding\n",
-    "### 3. Data Transformation (StandardScaler or MinMaxScaler)\n",
-    "### 4. Grid Search and Cross-Validation with Decision Tree Classifier\n",
-    "### 5. Tree diagram of the Decision Tree\n",
-    "### 6. Confusion Matrix, Classification report, and ROC-AUCdata preprocessing"
+    "1. data preprocessing <br>\n",
+    "2. One-hot Encoding <br>\n",
+    "3. Data Transformation (StandardScaler or MinMaxScaler) <br>\n",
+    "4. Grid Search and Cross-Validation with Decision Tree Classifier <br>\n",
+    "5. Tree diagram of the Decision Tree <br>\n",
+    "6. Confusion Matrix, Classification report, and ROC-AUCdata preprocessing <br>"
    ]
   },
   {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +86,513 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Account_Length</th>\n",
+       "      <th>Vmail_Message</th>\n",
+       "      <th>Day_Mins</th>\n",
+       "      <th>Eve_Mins</th>\n",
+       "      <th>Night_Mins</th>\n",
+       "      <th>Intl_Mins</th>\n",
+       "      <th>CustServ_Calls</th>\n",
+       "      <th>Churn</th>\n",
+       "      <th>Intl_Plan</th>\n",
+       "      <th>Vmail_Plan</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Day_Charge</th>\n",
+       "      <th>Eve_Calls</th>\n",
+       "      <th>Eve_Charge</th>\n",
+       "      <th>Night_Calls</th>\n",
+       "      <th>Night_Charge</th>\n",
+       "      <th>Intl_Calls</th>\n",
+       "      <th>Intl_Charge</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Area_Code</th>\n",
+       "      <th>Phone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>128</td>\n",
+       "      <td>25</td>\n",
+       "      <td>265.1</td>\n",
+       "      <td>197.4</td>\n",
+       "      <td>244.7</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>45.07</td>\n",
+       "      <td>99</td>\n",
+       "      <td>16.78</td>\n",
+       "      <td>91</td>\n",
+       "      <td>11.01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.70</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>415</td>\n",
+       "      <td>382-4657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>107</td>\n",
+       "      <td>26</td>\n",
+       "      <td>161.6</td>\n",
+       "      <td>195.5</td>\n",
+       "      <td>254.4</td>\n",
+       "      <td>13.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27.47</td>\n",
+       "      <td>103</td>\n",
+       "      <td>16.62</td>\n",
+       "      <td>103</td>\n",
+       "      <td>11.45</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>415</td>\n",
+       "      <td>371-7191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>137</td>\n",
+       "      <td>0</td>\n",
+       "      <td>243.4</td>\n",
+       "      <td>121.2</td>\n",
+       "      <td>162.6</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>41.38</td>\n",
+       "      <td>110</td>\n",
+       "      <td>10.30</td>\n",
+       "      <td>104</td>\n",
+       "      <td>7.32</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.29</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>415</td>\n",
+       "      <td>358-1921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>299.4</td>\n",
+       "      <td>61.9</td>\n",
+       "      <td>196.9</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>50.90</td>\n",
+       "      <td>88</td>\n",
+       "      <td>5.26</td>\n",
+       "      <td>89</td>\n",
+       "      <td>8.86</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>408</td>\n",
+       "      <td>375-9999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>166.7</td>\n",
+       "      <td>148.3</td>\n",
+       "      <td>186.9</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>...</td>\n",
+       "      <td>28.34</td>\n",
+       "      <td>122</td>\n",
+       "      <td>12.61</td>\n",
+       "      <td>121</td>\n",
+       "      <td>8.41</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.73</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>415</td>\n",
+       "      <td>330-6626</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Account_Length  Vmail_Message  Day_Mins  Eve_Mins  Night_Mins  Intl_Mins  \\\n",
+       "0             128             25     265.1     197.4       244.7       10.0   \n",
+       "1             107             26     161.6     195.5       254.4       13.7   \n",
+       "2             137              0     243.4     121.2       162.6       12.2   \n",
+       "3              84              0     299.4      61.9       196.9        6.6   \n",
+       "4              75              0     166.7     148.3       186.9       10.1   \n",
+       "\n",
+       "   CustServ_Calls Churn Intl_Plan Vmail_Plan  ...  Day_Charge  Eve_Calls  \\\n",
+       "0               1    no        no        yes  ...       45.07         99   \n",
+       "1               1    no        no        yes  ...       27.47        103   \n",
+       "2               0    no        no         no  ...       41.38        110   \n",
+       "3               2    no       yes         no  ...       50.90         88   \n",
+       "4               3    no       yes         no  ...       28.34        122   \n",
+       "\n",
+       "   Eve_Charge  Night_Calls  Night_Charge  Intl_Calls  Intl_Charge  State  \\\n",
+       "0       16.78           91         11.01           3         2.70     KS   \n",
+       "1       16.62          103         11.45           3         3.70     OH   \n",
+       "2       10.30          104          7.32           5         3.29     NJ   \n",
+       "3        5.26           89          8.86           7         1.78     OH   \n",
+       "4       12.61          121          8.41           3         2.73     OK   \n",
+       "\n",
+       "  Area_Code     Phone  \n",
+       "0       415  382-4657  \n",
+       "1       415  371-7191  \n",
+       "2       415  358-1921  \n",
+       "3       408  375-9999  \n",
+       "4       415  330-6626  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"../Data/Churn_Data_set.csv\")\n",
+    "display(df.head(5))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Data Description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Account_Length</th>\n",
+       "      <th>Vmail_Message</th>\n",
+       "      <th>Day_Mins</th>\n",
+       "      <th>Eve_Mins</th>\n",
+       "      <th>Night_Mins</th>\n",
+       "      <th>Intl_Mins</th>\n",
+       "      <th>CustServ_Calls</th>\n",
+       "      <th>Day_Calls</th>\n",
+       "      <th>Day_Charge</th>\n",
+       "      <th>Eve_Calls</th>\n",
+       "      <th>Eve_Charge</th>\n",
+       "      <th>Night_Calls</th>\n",
+       "      <th>Night_Charge</th>\n",
+       "      <th>Intl_Calls</th>\n",
+       "      <th>Intl_Charge</th>\n",
+       "      <th>Area_Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "      <td>3333.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>101.064806</td>\n",
+       "      <td>8.099010</td>\n",
+       "      <td>179.775098</td>\n",
+       "      <td>200.980348</td>\n",
+       "      <td>200.872037</td>\n",
+       "      <td>10.237294</td>\n",
+       "      <td>1.562856</td>\n",
+       "      <td>100.435644</td>\n",
+       "      <td>30.562307</td>\n",
+       "      <td>100.114311</td>\n",
+       "      <td>17.083540</td>\n",
+       "      <td>100.107711</td>\n",
+       "      <td>9.039325</td>\n",
+       "      <td>4.479448</td>\n",
+       "      <td>2.764581</td>\n",
+       "      <td>437.182418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>39.822106</td>\n",
+       "      <td>13.688365</td>\n",
+       "      <td>54.467389</td>\n",
+       "      <td>50.713844</td>\n",
+       "      <td>50.573847</td>\n",
+       "      <td>2.791840</td>\n",
+       "      <td>1.315491</td>\n",
+       "      <td>20.069084</td>\n",
+       "      <td>9.259435</td>\n",
+       "      <td>19.922625</td>\n",
+       "      <td>4.310668</td>\n",
+       "      <td>19.568609</td>\n",
+       "      <td>2.275873</td>\n",
+       "      <td>2.461214</td>\n",
+       "      <td>0.753773</td>\n",
+       "      <td>42.371290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>23.200000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>1.040000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>408.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>74.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>143.700000</td>\n",
+       "      <td>166.600000</td>\n",
+       "      <td>167.000000</td>\n",
+       "      <td>8.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>24.430000</td>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>14.160000</td>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>7.520000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.300000</td>\n",
+       "      <td>408.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>179.400000</td>\n",
+       "      <td>201.400000</td>\n",
+       "      <td>201.200000</td>\n",
+       "      <td>10.300000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>30.500000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>17.120000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>9.050000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2.780000</td>\n",
+       "      <td>415.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>127.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>216.400000</td>\n",
+       "      <td>235.300000</td>\n",
+       "      <td>235.300000</td>\n",
+       "      <td>12.100000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>114.000000</td>\n",
+       "      <td>36.790000</td>\n",
+       "      <td>114.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>113.000000</td>\n",
+       "      <td>10.590000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>3.270000</td>\n",
+       "      <td>510.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>243.000000</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>350.800000</td>\n",
+       "      <td>363.700000</td>\n",
+       "      <td>395.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>165.000000</td>\n",
+       "      <td>59.640000</td>\n",
+       "      <td>170.000000</td>\n",
+       "      <td>30.910000</td>\n",
+       "      <td>175.000000</td>\n",
+       "      <td>17.770000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>5.400000</td>\n",
+       "      <td>510.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Account_Length  Vmail_Message     Day_Mins     Eve_Mins   Night_Mins  \\\n",
+       "count     3333.000000    3333.000000  3333.000000  3333.000000  3333.000000   \n",
+       "mean       101.064806       8.099010   179.775098   200.980348   200.872037   \n",
+       "std         39.822106      13.688365    54.467389    50.713844    50.573847   \n",
+       "min          1.000000       0.000000     0.000000     0.000000    23.200000   \n",
+       "25%         74.000000       0.000000   143.700000   166.600000   167.000000   \n",
+       "50%        101.000000       0.000000   179.400000   201.400000   201.200000   \n",
+       "75%        127.000000      20.000000   216.400000   235.300000   235.300000   \n",
+       "max        243.000000      51.000000   350.800000   363.700000   395.000000   \n",
+       "\n",
+       "         Intl_Mins  CustServ_Calls    Day_Calls   Day_Charge    Eve_Calls  \\\n",
+       "count  3333.000000     3333.000000  3333.000000  3333.000000  3333.000000   \n",
+       "mean     10.237294        1.562856   100.435644    30.562307   100.114311   \n",
+       "std       2.791840        1.315491    20.069084     9.259435    19.922625   \n",
+       "min       0.000000        0.000000     0.000000     0.000000     0.000000   \n",
+       "25%       8.500000        1.000000    87.000000    24.430000    87.000000   \n",
+       "50%      10.300000        1.000000   101.000000    30.500000   100.000000   \n",
+       "75%      12.100000        2.000000   114.000000    36.790000   114.000000   \n",
+       "max      20.000000        9.000000   165.000000    59.640000   170.000000   \n",
+       "\n",
+       "        Eve_Charge  Night_Calls  Night_Charge   Intl_Calls  Intl_Charge  \\\n",
+       "count  3333.000000  3333.000000   3333.000000  3333.000000  3333.000000   \n",
+       "mean     17.083540   100.107711      9.039325     4.479448     2.764581   \n",
+       "std       4.310668    19.568609      2.275873     2.461214     0.753773   \n",
+       "min       0.000000    33.000000      1.040000     0.000000     0.000000   \n",
+       "25%      14.160000    87.000000      7.520000     3.000000     2.300000   \n",
+       "50%      17.120000   100.000000      9.050000     4.000000     2.780000   \n",
+       "75%      20.000000   113.000000     10.590000     6.000000     3.270000   \n",
+       "max      30.910000   175.000000     17.770000    20.000000     5.400000   \n",
+       "\n",
+       "         Area_Code  \n",
+       "count  3333.000000  \n",
+       "mean    437.182418  \n",
+       "std      42.371290  \n",
+       "min     408.000000  \n",
+       "25%     408.000000  \n",
+       "50%     415.000000  \n",
+       "75%     510.000000  \n",
+       "max     510.000000  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -103,7 +608,8 @@
    "hash": "40c2fac8deeaeec80c11f86338dc80eaddcd45c6ab0761f221b780b5a4c0da1b"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -117,8 +623,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
