--- a/Jupyter Notebooks/churn_analysis.ipynb
+++ b/Jupyter Notebooks/churn_analysis.ipynb
@@ -569,38 +569,377 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3333 entries, 0 to 3332\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column          Non-Null Count  Dtype  \n",
+      "---  ------          --------------  -----  \n",
+      " 0   Account_Length  3333 non-null   int64  \n",
+      " 1   Vmail_Message   3333 non-null   int64  \n",
+      " 2   Day_Mins        3333 non-null   float64\n",
+      " 3   Eve_Mins        3333 non-null   float64\n",
+      " 4   Night_Mins      3333 non-null   float64\n",
+      " 5   Intl_Mins       3333 non-null   float64\n",
+      " 6   CustServ_Calls  3333 non-null   int64  \n",
+      " 7   Churn           3333 non-null   object \n",
+      " 8   Intl_Plan       3333 non-null   object \n",
+      " 9   Vmail_Plan      3333 non-null   object \n",
+      " 10  Day_Calls       3333 non-null   int64  \n",
+      " 11  Day_Charge      3333 non-null   float64\n",
+      " 12  Eve_Calls       3333 non-null   int64  \n",
+      " 13  Eve_Charge      3333 non-null   float64\n",
+      " 14  Night_Calls     3333 non-null   int64  \n",
+      " 15  Night_Charge    3333 non-null   float64\n",
+      " 16  Intl_Calls      3333 non-null   int64  \n",
+      " 17  Intl_Charge     3333 non-null   float64\n",
+      "dtypes: float64(8), int64(7), object(3)\n",
+      "memory usage: 468.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.drop(['State', 'Area_Code', 'Phone'], axis=1)\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Categorical Variables"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['yes' 'no']\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "no     2411\n",
+       "yes     922\n",
+       "Name: Vmail_Plan, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(df['Vmail_Plan'].unique())\n",
+    "print(len(df['Vmail_Plan'].unique()))\n",
+    "display(df['Vmail_Plan'].value_counts())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['no' 'yes']\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "no     3010\n",
+       "yes     323\n",
+       "Name: Intl_Plan, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(df['Intl_Plan'].unique())\n",
+    "print(len(df['Intl_Plan'].unique()))\n",
+    "display(df['Intl_Plan'].value_counts())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['no' 'yes']\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "no     2850\n",
+       "yes     483\n",
+       "Name: Churn, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(df['Churn'].unique())\n",
+    "print(len(df['Churn'].unique()))\n",
+    "display(df['Churn'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Findings\n",
+    "- The number of categorial feature is 2.\n",
+    "- The categorical feature isn't ordinal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### One-Hot Encoding\n",
+    "One-Hot Encoding works better for this dataset. Because the 'Vmail_Plan' & 'Intl_Plan' features and 'Churn' target aren't ordinal and the number of categorical feature is less as it's shown above. That's why One-Hot Encoding is applied in this dataset. "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Account_Length</th>\n",
+       "      <th>Vmail_Message</th>\n",
+       "      <th>Day_Mins</th>\n",
+       "      <th>Eve_Mins</th>\n",
+       "      <th>Night_Mins</th>\n",
+       "      <th>Intl_Mins</th>\n",
+       "      <th>CustServ_Calls</th>\n",
+       "      <th>Day_Calls</th>\n",
+       "      <th>Day_Charge</th>\n",
+       "      <th>Eve_Calls</th>\n",
+       "      <th>Eve_Charge</th>\n",
+       "      <th>Night_Calls</th>\n",
+       "      <th>Night_Charge</th>\n",
+       "      <th>Intl_Calls</th>\n",
+       "      <th>Intl_Charge</th>\n",
+       "      <th>Churn_yes</th>\n",
+       "      <th>Intl_Plan_yes</th>\n",
+       "      <th>Vmail_Plan_yes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>94</td>\n",
+       "      <td>0</td>\n",
+       "      <td>181.5</td>\n",
+       "      <td>199.9</td>\n",
+       "      <td>287.7</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>98</td>\n",
+       "      <td>30.86</td>\n",
+       "      <td>88</td>\n",
+       "      <td>16.99</td>\n",
+       "      <td>114</td>\n",
+       "      <td>12.95</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.78</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>970</th>\n",
+       "      <td>85</td>\n",
+       "      <td>0</td>\n",
+       "      <td>176.4</td>\n",
+       "      <td>224.9</td>\n",
+       "      <td>219.6</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>122</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>123</td>\n",
+       "      <td>19.12</td>\n",
+       "      <td>50</td>\n",
+       "      <td>9.88</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3073</th>\n",
+       "      <td>84</td>\n",
+       "      <td>38</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>153.6</td>\n",
+       "      <td>260.4</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>106</td>\n",
+       "      <td>32.81</td>\n",
+       "      <td>106</td>\n",
+       "      <td>13.06</td>\n",
+       "      <td>87</td>\n",
+       "      <td>11.72</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2596</th>\n",
+       "      <td>73</td>\n",
+       "      <td>0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>138.3</td>\n",
+       "      <td>224.2</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>92</td>\n",
+       "      <td>20.74</td>\n",
+       "      <td>114</td>\n",
+       "      <td>11.76</td>\n",
+       "      <td>128</td>\n",
+       "      <td>10.09</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2317</th>\n",
+       "      <td>106</td>\n",
+       "      <td>0</td>\n",
+       "      <td>212.9</td>\n",
+       "      <td>187.0</td>\n",
+       "      <td>128.1</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>110</td>\n",
+       "      <td>36.19</td>\n",
+       "      <td>69</td>\n",
+       "      <td>15.90</td>\n",
+       "      <td>71</td>\n",
+       "      <td>5.76</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Account_Length  Vmail_Message  Day_Mins  Eve_Mins  Night_Mins  \\\n",
+       "299               94              0     181.5     199.9       287.7   \n",
+       "970               85              0     176.4     224.9       219.6   \n",
+       "3073              84             38     193.0     153.6       260.4   \n",
+       "2596              73              0     122.0     138.3       224.2   \n",
+       "2317             106              0     212.9     187.0       128.1   \n",
+       "\n",
+       "      Intl_Mins  CustServ_Calls  Day_Calls  Day_Charge  Eve_Calls  Eve_Charge  \\\n",
+       "299         6.6               1         98       30.86         88       16.99   \n",
+       "970        11.5               1        122       29.99        123       19.12   \n",
+       "3073        7.4               2        106       32.81        106       13.06   \n",
+       "2596        5.8               1         92       20.74        114       11.76   \n",
+       "2317        6.3               3        110       36.19         69       15.90   \n",
+       "\n",
+       "      Night_Calls  Night_Charge  Intl_Calls  Intl_Charge  Churn_yes  \\\n",
+       "299           114         12.95           5         1.78          0   \n",
+       "970            50          9.88           1         3.11          0   \n",
+       "3073           87         11.72           5         2.00          0   \n",
+       "2596          128         10.09           5         1.57          0   \n",
+       "2317           71          5.76           3         1.70          0   \n",
+       "\n",
+       "      Intl_Plan_yes  Vmail_Plan_yes  \n",
+       "299               0               0  \n",
+       "970               0               0  \n",
+       "3073              0               1  \n",
+       "2596              0               0  \n",
+       "2317              0               0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df = pd.get_dummies(df, drop_first=True)\n",
+    "display(df.sample(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3333, 18)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
   }
  ],
  "metadata": {
