Data analysis: Best hyperparameters in the grid search

--- a/Jupyter Notebooks/churn_analysis.ipynb
+++ b/Jupyter Notebooks/churn_analysis.ipynb
@@ -774,108 +774,108 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>701</th>\n",
-       "      <td>94</td>\n",
-       "      <td>0</td>\n",
-       "      <td>139.4</td>\n",
-       "      <td>159.1</td>\n",
-       "      <td>128.2</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>95</td>\n",
-       "      <td>23.70</td>\n",
-       "      <td>92</td>\n",
-       "      <td>13.52</td>\n",
-       "      <td>129</td>\n",
-       "      <td>5.77</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.08</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3088</th>\n",
-       "      <td>100</td>\n",
-       "      <td>29</td>\n",
-       "      <td>213.6</td>\n",
-       "      <td>175.9</td>\n",
-       "      <td>207.2</td>\n",
-       "      <td>8.9</td>\n",
+       "      <th>1821</th>\n",
+       "      <td>123</td>\n",
+       "      <td>39</td>\n",
+       "      <td>270.4</td>\n",
+       "      <td>245.1</td>\n",
+       "      <td>108.9</td>\n",
+       "      <td>15.4</td>\n",
        "      <td>1</td>\n",
-       "      <td>127</td>\n",
-       "      <td>36.31</td>\n",
-       "      <td>82</td>\n",
-       "      <td>14.95</td>\n",
-       "      <td>100</td>\n",
-       "      <td>9.32</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.40</td>\n",
+       "      <td>99</td>\n",
+       "      <td>45.97</td>\n",
+       "      <td>110</td>\n",
+       "      <td>20.83</td>\n",
+       "      <td>113</td>\n",
+       "      <td>4.90</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4.16</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2052</th>\n",
-       "      <td>183</td>\n",
+       "      <th>242</th>\n",
+       "      <td>36</td>\n",
        "      <td>0</td>\n",
-       "      <td>116.7</td>\n",
-       "      <td>213.8</td>\n",
-       "      <td>214.3</td>\n",
-       "      <td>9.7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>92</td>\n",
-       "      <td>19.84</td>\n",
-       "      <td>112</td>\n",
-       "      <td>18.17</td>\n",
-       "      <td>112</td>\n",
-       "      <td>9.64</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2.62</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>262</th>\n",
-       "      <td>117</td>\n",
-       "      <td>0</td>\n",
-       "      <td>143.3</td>\n",
-       "      <td>211.3</td>\n",
-       "      <td>185.2</td>\n",
-       "      <td>11.5</td>\n",
+       "      <td>253.4</td>\n",
+       "      <td>182.4</td>\n",
+       "      <td>275.8</td>\n",
+       "      <td>8.4</td>\n",
        "      <td>1</td>\n",
+       "      <td>77</td>\n",
+       "      <td>43.08</td>\n",
+       "      <td>151</td>\n",
+       "      <td>15.50</td>\n",
        "      <td>103</td>\n",
-       "      <td>24.36</td>\n",
-       "      <td>108</td>\n",
-       "      <td>17.96</td>\n",
-       "      <td>96</td>\n",
-       "      <td>8.33</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.11</td>\n",
+       "      <td>12.41</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.27</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>495</th>\n",
-       "      <td>161</td>\n",
+       "      <th>164</th>\n",
+       "      <td>146</td>\n",
        "      <td>0</td>\n",
-       "      <td>156.1</td>\n",
-       "      <td>180.3</td>\n",
-       "      <td>179.6</td>\n",
-       "      <td>11.1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>114</td>\n",
-       "      <td>26.54</td>\n",
-       "      <td>63</td>\n",
-       "      <td>15.33</td>\n",
-       "      <td>115</td>\n",
-       "      <td>8.08</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3.00</td>\n",
+       "      <td>206.3</td>\n",
+       "      <td>148.6</td>\n",
+       "      <td>167.2</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>151</td>\n",
+       "      <td>35.07</td>\n",
+       "      <td>89</td>\n",
+       "      <td>12.63</td>\n",
+       "      <td>91</td>\n",
+       "      <td>7.52</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1143</th>\n",
+       "      <td>105</td>\n",
+       "      <td>29</td>\n",
+       "      <td>179.4</td>\n",
+       "      <td>275.4</td>\n",
+       "      <td>246.1</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113</td>\n",
+       "      <td>30.50</td>\n",
+       "      <td>100</td>\n",
+       "      <td>23.41</td>\n",
+       "      <td>105</td>\n",
+       "      <td>11.07</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.70</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1803</th>\n",
+       "      <td>101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>174.9</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>105</td>\n",
+       "      <td>29.73</td>\n",
+       "      <td>75</td>\n",
+       "      <td>22.27</td>\n",
+       "      <td>93</td>\n",
+       "      <td>9.45</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -884,32 +884,32 @@
       ],
       "text/plain": [
        "      Account_Length  Vmail_Message  Day_Mins  Eve_Mins  Night_Mins  \\\n",
-       "701               94              0     139.4     159.1       128.2   \n",
-       "3088             100             29     213.6     175.9       207.2   \n",
-       "2052             183              0     116.7     213.8       214.3   \n",
-       "262              117              0     143.3     211.3       185.2   \n",
-       "495              161              0     156.1     180.3       179.6   \n",
+       "1821             123             39     270.4     245.1       108.9   \n",
+       "242               36              0     253.4     182.4       275.8   \n",
+       "164              146              0     206.3     148.6       167.2   \n",
+       "1143             105             29     179.4     275.4       246.1   \n",
+       "1803             101              0     174.9     262.0       210.0   \n",
        "\n",
        "      Intl_Mins  CustServ_Calls  Day_Calls  Day_Charge  Eve_Calls  Eve_Charge  \\\n",
-       "701         7.7               0         95       23.70         92       13.52   \n",
-       "3088        8.9               1        127       36.31         82       14.95   \n",
-       "2052        9.7               2         92       19.84        112       18.17   \n",
-       "262        11.5               1        103       24.36        108       17.96   \n",
-       "495        11.1               2        114       26.54         63       15.33   \n",
+       "1821       15.4               1         99       45.97        110       20.83   \n",
+       "242         8.4               1         77       43.08        151       15.50   \n",
+       "164         6.1               1        151       35.07         89       12.63   \n",
+       "1143       10.0               0        113       30.50        100       23.41   \n",
+       "1803        8.5               1        105       29.73         75       22.27   \n",
        "\n",
        "      Night_Calls  Night_Charge  Intl_Calls  Intl_Charge  Churn_yes  \\\n",
-       "701           129          5.77           3         2.08          0   \n",
-       "3088          100          9.32           3         2.40          0   \n",
-       "2052          112          9.64           6         2.62          0   \n",
-       "262            96          8.33           3         3.11          0   \n",
-       "495           115          8.08           9         3.00          0   \n",
+       "1821          113          4.90           7         4.16          0   \n",
+       "242           103         12.41           2         2.27          0   \n",
+       "164            91          7.52           3         1.65          0   \n",
+       "1143          105         11.07           5         2.70          0   \n",
+       "1803           93          9.45           5         2.30          0   \n",
        "\n",
        "      Intl_Plan_yes  Vmail_Plan_yes  \n",
-       "701               0               0  \n",
-       "3088              0               1  \n",
-       "2052              0               0  \n",
-       "262               0               0  \n",
-       "495               1               0  "
+       "1821              0               1  \n",
+       "242               0               0  \n",
+       "164               0               0  \n",
+       "1143              0               1  \n",
+       "1803              0               0  "
       ]
      },
      "metadata": {},
@@ -1362,9 +1362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2666, 17) (667, 17) (2666, 1) (667, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Split the dataset intro train and test set\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, \n",
@@ -1382,6 +1390,40 @@
    "source": [
     "### Grid Search and Cross-Validation with Decision Tree Classifier"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = {'criterion': ['gini','entropy'],\n",
+    "              'max_depth': [3, 4, 5, 6, 7]}\n",
+    "\n",
+    "model = DecisionTreeClassifier(random_state=42)\n",
+    "grid_search = GridSearchCV(estimator = model,\n",
+    "                           param_grid = parameters,\n",
+    "                           scoring = \"accuracy\",\n",
+    "                           cv=5,\n",
+    "                           n_jobs=-1)\n",
+    "\n",
+    "# fit the model with the best hyper-parameters\n",
+    "grid_result = grid_search.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Best hyperparameters in the grid search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
